browser/themes/shared/browser.inc.css
%include downloads/indicator.inc.css
%include addons/extension-controlled.inc.css

%filter substitution
%define identityBoxPaddingInline 6px
%define identityBoxMarginInlineEnd 2px
%define lwtPopupBrighttextLinkColor #74c0ff
%define themeTransition background-color 0.1s cubic-bezier(.17,.67,.83,.67)
%define urlbarBreakoutExtend 2px

:root {
  
  --space-above-tabbar: 0px;
  --tabs-navbar-shadow-size: 1px;
  --short-notification-background: #0250BB;
  --short-notification-gradient: #9059FF;
}

:root[extradragspace][tabsintitlebar]:not([inFullscreen]) {
  --space-above-tabbar: 8px;
}

@media (min-resolution: 1.5dppx) {
  :root {
    --tabs-navbar-shadow-size: 0.5px;
  }
}

@media (min-resolution: 3dppx) {
  :root {
    --tabs-navbar-shadow-size: 0.33px;
  }
}



:root[lwt-popup-brighttext] panel .text-link {
  color: @lwtPopupBrighttextLinkColor@;
}

#PersonalToolbar:-moz-lwtheme .text-link,
#nav-bar:-moz-lwtheme .text-link {
  color: #0060df;
}

#PersonalToolbar[brighttext]:-moz-lwtheme .text-link,
#nav-bar[brighttext]:-moz-lwtheme .text-link {
  color: #45a1ff;
}



#navigator-toolbox {
  border-bottom: 1px solid var(--chrome-content-separator-color);
}

:root[customizing] #navigator-toolbox {
  border-bottom-style: none;
}

:root[sessionrestored] #nav-bar:-moz-lwtheme {
  transition: @themeTransition@;
}



#PersonalToolbar {
  overflow: clip;
  max-height: 4em;
  padding: 2px 6px;
}

:root[uidensity=compact] #PersonalToolbar {
  padding-inline: 2px;
}

:root[sessionrestored] #PersonalToolbar:not(.instant) {
  transition: min-height 170ms ease-out, max-height 170ms ease-out, @themeTransition@;
}

#PersonalToolbar[collapsed=true] {
  min-height: 0.1px;
  max-height: 0;
}

:root[sessionrestored] #PersonalToolbar:not(.instant)[collapsed=true] {
  transition: min-height 170ms ease-out, max-height 170ms ease-out, visibility 170ms linear;
}

#PersonalToolbar[collapsed=false]:not([initialized]) > #personal-toolbar-empty {
  visibility: hidden;
}










#PersonalToolbar[collapsed=false] > #personal-toolbar-empty[nowidth] > #personal-toolbar-empty-description {
  width: 0;
  white-space: nowrap;
  position: relative;
  z-index: 1;
}

#PersonalToolbar[collapsed=true].instant {
  visibility: collapse;
}

#PersonalToolbar[customizing] {
  outline: 1px dashed;
  outline-offset: -3px;
  -moz-outline-radius: 2px;
}

#PersonalToolbar[customizing]:empty {
  
  min-height: 22px;
}

#PlacesToolbarDropIndicator {
  list-style-image: url(chrome://browser/skin/toolbar-drag-indicator.svg);
  pointer-events: none;
}


menupopup::part(drop-indicator-bar) {
  position: relative;
  
  margin-block: -1px;
}

menupopup::part(drop-indicator) {
  list-style-image: none;
  height: 2px;
  margin-inline-end: -4em;
  background-color: Highlight;
  pointer-events: none;
}



#navigator-toolbox {
  position: relative;
}

#library-animatable-box {
  display: none;
}

#library-animatable-box[animate] {
  display: block;
}



.unified-nav-back,
.unified-nav-forward {
  -moz-context-properties: fill;
  fill: currentColor;
}

.unified-nav-back[_moz-menuactive]:-moz-locale-dir(ltr),
.unified-nav-forward[_moz-menuactive]:-moz-locale-dir(rtl) {
  list-style-image: url("chrome://browser/skin/back.svg") !important;
}

.unified-nav-forward[_moz-menuactive]:-moz-locale-dir(ltr),
.unified-nav-back[_moz-menuactive]:-moz-locale-dir(rtl) {
  list-style-image: url("chrome://browser/skin/forward.svg") !important;
}



.browserContainer > findbar {
  background-color: var(--toolbar-non-lwt-bgcolor);
  color: var(--toolbar-non-lwt-textcolor);
  text-shadow: none;
}

:root:not([lwtheme-image]) .browserContainer > findbar:-moz-lwtheme {
  background-color: var(--lwt-accent-color);
  background-image: linear-gradient(var(--toolbar-bgcolor), var(--toolbar-bgcolor));
  border-top-color: var(--chrome-content-separator-color);
  color: var(--toolbar-color);
}

:root:not([lwtheme-image]) .browserContainer > findbar:-moz-lwtheme:-moz-window-inactive {
  background-color: var(--lwt-accent-color-inactive, var(--lwt-accent-color));
}



.accessibility-indicator,
.private-browsing-indicator {
  background-repeat: no-repeat;
  background-size: 100% auto;
  background-position: center;
  width: 24px;
  height: 24px;
  margin-inline: 7px;
  position: relative;
  

  z-index: 1;
}

.accessibility-indicator {
  background-image: url("chrome://browser/skin/accessibility.svg");
  -moz-user-focus: normal;
  
  appearance: none;
  margin-block: unset;
  min-width: unset;
  color: unset;
  text-shadow: unset;
}

.accessibility-indicator:is(:hover, :active, :focus, :-moz-focusring) {
  background-image: url("chrome://browser/skin/accessibility-active.svg");
  outline: 0;
}

.private-browsing-indicator {
  background-image: url("chrome://browser/skin/private-browsing.svg");
}

:root:not([accessibilitymode]) .accessibility-indicator,
:root:not([privatebrowsingmode=temporary]) .private-browsing-indicator {
  display: none;
}





#DateTimePickerPanel {
  --arrowpanel-background: var(--default-arrowpanel-background);
  --arrowpanel-color: var(--default-arrowpanel-color);
  --arrowpanel-border-color: var(--default-arrowpanel-border-color);
}

#DateTimePickerPanel[side="top"],
#DateTimePickerPanel[side="bottom"] {
  margin-inline: 0;
}

#widget-overflow .webextension-popup-browser {
  background: #fff;

  

  min-height: 100%;
}

#addon-progress-notification-progressmeter {
  margin: 2px 4px;
}


#addon-webext-perm-info {
  margin-inline-start: 0;
}



#cfr-notification-header {
  width: 100%;
  display: block;
  text-align: center;
  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
}

#cfr-notification-header-stack {
  width: 100%;
}

#cfr-notification-header-label {
  margin: 9px;
  font-size: 13px;
  font-weight: 600;
}

#cfr-notification-header-link {
  margin: 7px;
  color: inherit;
  cursor: default;
  justify-self: end;
}
/* ... */

