Bug 1681169 - fix few-px horizontal flicker of bookmarks toolbar buttons due to margins on empty toolbar placeholder, r=jaws
Differential Revision: https://phabricator.services.mozilla.com/D99279

UltraBlame original commit: f01f746874d4b81eb44ec92a588edfb72b7329a8

--- a/browser/themes/shared/browser.inc.css
+++ b/browser/themes/shared/browser.inc.css
@@ -105,6 +105,7 @@
 
 
 #PersonalToolbar[collapsed=false] > #personal-toolbar-empty[nowidth] > #personal-toolbar-empty-description {
+  margin-inline: 0;
   width: 0;
   white-space: nowrap;
   position: relative;
